--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "devDependencies": {
     "coffee-script": "~1.6.3",
     "gulp": "~3.4.0",
-    "gulp-header": "~1.0.2",
-    "gulp-uglify": "~0.1.0",
-    "gulp-compass": "~1.0.3",
+    "gulp-bower": "0.0.1",
     "gulp-coffee": "~1.2.5",
+    "gulp-compass": "~1.0.3",
     "gulp-concat": "~2.1.7",
+    "gulp-header": "~1.0.2",
     "gulp-rename": "~0.2.1",
+    "gulp-uglify": "~0.1.0",
     "gulp-util": "~2.2.9",
-    "gulp-bower": "0.0.1"
+    "gulp-wrap-umd": "^0.2.1"
   }
 }
